nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: dev
spec:
  selector:
    app: frontend-dev
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
