react-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  selector:
    app: react-dev
      #type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
